# web-counter

./: .gitignore  Makefile  web-counter.cabal
html/: index.html  trace.html  trace2.html
src/: DStatus.hs  Geo.hs  Main.hs  Stat.hs
src/config/: web-counter.conf
src/daemon/: Makefile  daemon.cabal
src/daemon/src/: DataService.hs  Geo.hs  Main.hs  Stat.hs
src/daemon/src/Test/Web/: Counter.hs
src/site/: Makefile
src/site/html_old/: trace.html
src/site/html_old/html/: index.html  trace.html  trace2.html
src/web-counter/: LICENSE  Makefile  web-counter.cabal
src/web-counter/src/: Main.hs
