name:               web-counter
version:            0.1.0.0
cabal-version:      >=1.14
build-type:         Simple
license:            BSD3
license-file:       LICENSE
copyright:          (c) 2013 Michael Ilyin
author:             Michael Ilyin
maintainer:         milyin@gmail.com
stability:          experimental
homepage:           http://not-yet-implemented.com
bug-reports:        mailto:milyin@gmail.com
package-url:        http://not-yet-implemented.com
synopsis:           Web site visitors counter service
description:        The daemon for registering website visitors through js or image counter
category:           Web
tested-with:        GHC ==7.6.3

Executable web-counter
    default-language:   Haskell2010
    hs-source-dirs:     src
    main-is:            Main.hs
    build-depends:      base >=4, time, split, network, bytestring, containers, stm, mtl, 
                        blaze-html, blaze-markup, happstack-server, iproute, safecopy, acid-state,
                        ixset, lens

Test-Suite test-web-counter
    default-language:   Haskell2010
    type:               detailed-0.9
    hs-source-dirs:     src
    test-module:        Test.Web.Counter
    build-depends:      base, Cabal >= 1.9.2

